--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JournalApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.JournalApp.NoActionBar">  <!-- Apply one theme here -->
+
+        <!-- MainActivity declaration -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-
-            android:theme="@style/Theme.JournalApp">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.JournalApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- NoteDetailActivity declaration -->
+        <activity
+            android:name=".NoteDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_note_detail"
+            android:theme="@style/Theme.JournalApp.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
