--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
 
     <application
         android:allowBackup="true"
@@ -6,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JournalApp.NoActionBar">  <!-- Apply one theme here -->
+        android:theme="@style/Theme.JournalApp.NoActionBar"
+        android:networkSecurityConfig="@xml/network_security_config">  <!-- Apply one theme here -->
 
         <!-- MainActivity declaration -->
         <activity
