--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<<<<<<< HEAD
-    <uses-permission android:name="android.permission.INTERNET" />
-
-
-=======
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
->>>>>>> c86f773 (Reinitialize repository)
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:targetApi="31" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" tools:targetApi="33" />
 
     <application
         android:allowBackup="true"
@@ -18,15 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JournalApp.NoActionBar"
-<<<<<<< HEAD
-        android:networkSecurityConfig="@xml/network_security_config">  <!-- Apply one theme here -->
-
-        <!-- MainActivity declaration -->
-=======
         android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- MainActivity -->
->>>>>>> c86f773 (Reinitialize repository)
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -38,27 +28,12 @@
             </intent-filter>
         </activity>
 
-<<<<<<< HEAD
-        <!-- NoteDetailActivity declaration -->
-=======
         <!-- NoteDetailActivity -->
->>>>>>> c86f773 (Reinitialize repository)
         <activity
             android:name=".NoteDetailActivity"
             android:exported="false"
             android:label="@string/title_activity_note_detail"
-<<<<<<< HEAD
-            android:theme="@style/Theme.JournalApp.NoActionBar">
-        </activity>
-
-        <!--streak activity declaration-->
-        <activity android:name=".StreakActivity" />
-
-        <!--widget declaration-->
-        <receiver android:name=".JournalAppWidgetProvider"
-=======
             android:theme="@style/Theme.JournalApp.NoActionBar" />
-
 
         <!-- StreakActivity -->
         <activity android:name=".StreakActivity" />
@@ -66,27 +41,16 @@
         <!-- Widget -->
         <receiver
             android:name=".JournalAppWidgetProvider"
->>>>>>> c86f773 (Reinitialize repository)
             android:exported="true"
             android:label="Journal App Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-<<<<<<< HEAD
-
-=======
->>>>>>> c86f773 (Reinitialize repository)
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
 
     </application>
-<<<<<<< HEAD
 
 </manifest>
-=======
-</manifest>
-
-
->>>>>>> c86f773 (Reinitialize repository)
