--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JournalApp.NoActionBar"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.JournalApp">
 
-        <!-- MainActivity -->
+
+    <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -37,8 +38,10 @@
             android:label="@string/title_activity_note_detail"
             android:theme="@style/Theme.JournalApp.NoActionBar" />
 
-        <!-- StreakActivity -->
         <activity android:name=".StreakActivity" />
+
+
+
 
         <!-- Widget -->
         <receiver
